test/fixtures/syntax-errors/extra-brace.tcl
# This file has extra closing brace
proc testExtraBrace {x y} {
  puts "X is $x"
  }
}
